--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,11 +1,6 @@
 @import 'variables';
+@import 'header';
 
 .card-course-item {
   margin-top: 16px;
-}
-
-.user-avatar {
-  width: 30px;
-  border-radius: 50%;
-  margin-right: 5px;
 }
