--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,19 +1,19 @@
 <div class="mt-4">
     <div class="row">
 
-        {{#each courses}}
+        {{#each products}}
         <div class="col-sm-6 col-lg-4">
             <div class="card card-course-item">
-                <a href="/courses/{{this.slug}}">
+                <a href="/products/{{this.slug}}">
                     <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
                 </a>
 
                 <div class="card-body">
-                    <a href="/courses/{{this.slug}}">
+                    <a href="/products/{{this.slug}}">
                         <h5 class="card-title">{{this.name}}</h5>
                     </a>
                     <p class="card-text">{{this.description}}</p>
-                    <a href="#" class="btn btn-primary">Mua khóa học</a>
+                    <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
                 </div>
             </div>
         </div>
