--- a/src/resources/views/me/stored-products.hbs
+++ b/src/resources/views/me/stored-products.hbs
@@ -4,21 +4,21 @@
     <table class="table mt-4">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">Tên khóa học</th>
-                <th scope="col">Trình độ</th>
+                <th scope="col">STT</th>
+                <th scope="col">Tên sản phẩm</th>
+                <th scope="col">Giá</th>
                 <th scope="col">Thời gian tạo</th>
             </tr>
         </thead>
         <tbody>
-            {{#each courses}}
+            {{#each products}}
             <tr>
                 <th scope="row">{{sum @index 1}}</th>
                 <td>{{this.name}}</td>
-                <td>{{this.level}}</td>
+                <td>{{this.price}}</td>
                 <td>{{this.createdAt}}</td>
                 <td>
-                    <a href="/courses/{{this._id}}/edit" class="btn btn-link">Sửa</a>
+                    <a href="/products/{{this._id}}/edit" class="btn btn-link">Sửa</a>
                     <a href="" class="btn btn-link" data-toggle="modal" data-target="#modal-confirm">Xóa</a>
                 </td>
             </tr>
