--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,24 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/">F8 Education</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="/">G - Electronics</a>
+        <a class="navbar-brand ml-5" href="/">Sản phẩm</a>
+        <a class="navbar-brand ml-5" href="/introduce">Giới thiệu</a>
+        <a class="navbar-brand ml-5" href="/contact">Liên hệ</a>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse user-login" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <div class="dropdown">
                     <a class="nav-link dropdown-toggle" type="button" id="navbarDropdown" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        <img src="https://scontent.fsgn2-9.fna.fbcdn.net/v/t39.30808-6/345452521_544520214420679_8558241015595512206_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Xv3zpHgdBWoAX9pdXha&_nc_ht=scontent.fsgn2-9.fna&oh=00_AfDkadcPZmJCwkS_xWBpHlim9k0dHQ9jh1KDDc1agExg3A&oe=6550A901"
-                            alt="" class="user-avatar">
+                        <img src="/src/public/img/user.jpg" alt="" class="user-avatar">
                         Giangtt
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
+                        <a class="dropdown-item" href="/products/create">Thêm sản phẩm</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
+                        <a class="dropdown-item" href="/me/stored/products">Sản phẩm của tôi</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Đăng xuất</a>
                     </div>
